--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,10 @@
                 <a class="logo link" href="./index.html">Web<span class="text-theme-light">Studio</span> </a>
                 <ul class="menu list">
                     <li class="menu-item ">
-                        <a class="menu-link menu-link-item link" href="./index.html">Studio</a>
+                        <a class="menu-link link" href="./index.html">Studio</a>
                     </li>
                     <li class="menu-item ">
-                        <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+                        <a class="menu-link menu-link-item-nav link" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="menu-item ">
                         <a class="menu-link link" href="">Contacts</a>
