--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!-- advantages -->
         <section class="section feature-section" id="advantag">
             <div class="container">
-                <h2 class="section-title" hidden>top tips</h2>
+                <h2 class="section-title visually-hidden">top tips</h2>
                 <ul class="feature-list list">
                     <li class="feature-list-text">
                         <div class="faeture-icon">
