--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
         <!-- PORTFOLIO -->
         <section class="section-portfolio ">
             <div class="container">
-                    <h1 hidden>Portfolio</h1>
+                    <h1  class="visually-hidden">Portfolio</h1>
                     <ul class="filter list">
                         <li class="filter-btn">
                             <button type="button" class="modal-btn "> All</button>
